2005-12-01  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/treemodel.ccg:
	* gtk/src/treemodel.hg: Added a method overload of 
	rows_reordered() without the iter, because the GTK+ docs 
	now say that it can be 0. Added documentation, based on the 
	C documentation.

2005-12-01  Murray Cumming <murrayc@murrayc.com

	* examples/book/drawingarea/myarea.cc: 
	on_expose_event(): Port to cairo instead of 
	draw*(), though the Color and GC part should 
	probably be ported too.

2005-12-01  Murray Cumming <murrayc@murrayc.com>

	* configure.in: Depend on cairomm.
	* gdk/gdkmm/general.cc:
	* gdk/gdkmm/general.h:
	* gdk/src/drawable.hg: Use C++ Cairo:: types instead of 
	C cairo_* types.

2005-12-01  Murray Cumming <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Add a newline after the 
	newin xrefitem, to stop doxgygen associating the following 
	text with the xrefitem, so properties and returns do not 
	show up in the list of new API.

2005-12-01  Murray Cumming <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Remove link to 
	non-existing drawing_area_text example. 
	Bug #311176 from Jonathon Jongsma.

2005-11-30  Murray Cumming <murrayc@murrayc.com>
 
 	* docs/index.html: Change deprecated link to link to 
 	deprecated and new pages page.
 	* gdk/src/gdk_docs_override.xml:
 	* gtk/src/gtk_docs_override.xml: Change Since: to 
 	our @newin tags.

2005-11-30  Murray Cumming <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Added ALIASES 
	for @newin2p2, @newin2p4, @newin2p6, @newin2p8, and 
	@newin2p10. API marked with these tags will then be 
	listed together on a page. Doxygen already has @since, 
	but that does not list them on one page.
	* gdk/src/displaymanager.hg:
	* gtk/gtkmm/accelmap.h:
	* gtk/src/cellrenderer.hg:
	* gtk/src/clipboard.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/expander.hg:
	* gtk/src/filechooserwidget.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/radiotoolbutton.hg:
	* gtk/src/rc.hg: