@@ -1,5 +1,9 @@
 2005-12-01  Murray Cumming <murrayc@murrayc.com>
 
+	* gdk/gdkmm/general.h: Mark cairo API as new in 2.10.
+
+2005-12-01  Murray Cumming <murrayc@murrayc.com>
+
 	* gtk/src/treemodel.ccg:
 	* gtk/src/treemodel.hg: Added a method overload of 
 	rows_reordered() without the iter, because the GTK+ docs 
